<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/shape_bg_linearlayout_hijau">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/motor_cool_min"
            android:scaleType="centerCrop"
            android:background="@drawable/shape_putih"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.75">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/shape_putih"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:weightSum="0.75">

            <TextView
                android:paddingStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/welcome_back_nplease_login"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edt_email_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#000" />

            <EditText
                android:id="@+id/edt_pw_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#000" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_putih_outline_hijau_terang"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_belum_punya_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="Belum punya akun?"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_toSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_hijau_terang"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="20sp" />


        </LinearLayout>
    </LinearLayout>




</LinearLayout>