<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onBoarding.OnBoardingThreeActivity"
    android:background="@color/colorPrimaryDark">


    <Button
        android:id="@+id/button_lanjut_ob3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_green_agak_terang"
        android:text="@string/lanjut"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_ob3"
        android:layout_width="0dp"
        android:layout_height="370dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding_three" />

    <TextView
        android:id="@+id/tv_title_ob3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/praktis_dan_aman"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_deskrip_ob3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ob3" />

    <TextView
        android:id="@+id/tv_deskrip_ob3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/bukti_pembayaran_motor_kesukaan_kamu_kami_kirim_ke_email"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_ob3" />

</androidx.constraintlayout.widget.ConstraintLayout>